--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 	"dependencies": {
 		"next": "13.4.2",
 		"react": "18.2.0",
-		"react-dom": "18.2.0",
-		"swr": "^2.1.5"
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/node": "20.1.4",
